--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 			<version>4.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.eclipse.collections</groupId>
+			<artifactId>eclipse-collections</artifactId>
+			<version>11.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
