--- a/pom.xml
+++ b/pom.xml
@@ -96,20 +96,23 @@
 			<version>11.1.0</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/jakarta.enterprise/jakarta.enterprise.cdi-api -->
 		<dependency>
 			<groupId>jakarta.enterprise</groupId>
 			<artifactId>jakarta.enterprise.cdi-api</artifactId>
 			<version>4.0.1</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.jboss.weld/weld-core-test -->
 		<dependency>
 		    <groupId>org.jboss.weld</groupId>
 		    <artifactId>weld-core-test</artifactId>
 		    <version>5.1.0.Final</version>
 		</dependency>
 
+<dependency>
+    <groupId>jakarta.data</groupId>
+    <artifactId>jakarta-data-api</artifactId>
+    <version>1.0.0-b1</version>
+</dependency>
 <!--
 		<dependency>
 			<artifactId>jakarta-data-api</artifactId>
@@ -118,7 +121,6 @@
 		</dependency>
 -->
 
-<!-- https://mvnrepository.com/artifact/org.jboss.weld.module/weld-jta -->
 <dependency>
     <groupId>org.jboss.weld.module</groupId>
     <artifactId>weld-jta</artifactId>
@@ -126,7 +128,6 @@
 </dependency>
 
 
-<!-- https://mvnrepository.com/artifact/org.jboss.weld.se/weld-se-core -->
 <dependency>
     <groupId>org.jboss.weld.se</groupId>
     <artifactId>weld-se-core</artifactId>
@@ -134,7 +135,6 @@
 </dependency>
 
 
-<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
 <dependency>
     <groupId>org.eclipse.persistence</groupId>
     <artifactId>eclipselink</artifactId>
