--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
 
 
 	<dependencies>
+	
+		<dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.7.1</version>
+		</dependency>
+	
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -102,18 +109,31 @@
 			<version>4.0.1</version>
 		</dependency>
 		
+<!-- https://mvnrepository.com/artifact/org.jboss.narayana.jta/narayana-jta -->
+<dependency>
+    <groupId>org.jboss.narayana.jta</groupId>
+    <artifactId>narayana-jta</artifactId>
+    <version>6.0.0.Final</version>
+</dependency>
+
+<dependency>
+<groupId>org.jboss.narayana.jta</groupId>
+<artifactId>cdi</artifactId>
+<version>6.0.0.Final</version>
+</dependency>
+
+<!--
 		<dependency>
 		    <groupId>org.jboss.weld</groupId>
 		    <artifactId>weld-core-test</artifactId>
 		    <version>5.1.0.Final</version>
+		    <scope>test</scope>
 		</dependency>
-
 <dependency>
     <groupId>jakarta.data</groupId>
     <artifactId>jakarta-data-api</artifactId>
     <version>1.0.0-b1</version>
 </dependency>
-<!--
 		<dependency>
 			<artifactId>jakarta-data-api</artifactId>
 			<groupId>jakarta.data</groupId>
@@ -127,13 +147,11 @@
     <version>5.1.0.Final</version>
 </dependency>
 
-
 <dependency>
     <groupId>org.jboss.weld.se</groupId>
     <artifactId>weld-se-core</artifactId>
     <version>5.1.0.Final</version>
 </dependency>
-
 
 <dependency>
     <groupId>org.eclipse.persistence</groupId>
@@ -147,11 +165,13 @@
     <artifactId>log4j-api</artifactId>
     <version>2.7</version>
 </dependency>
+
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-core</artifactId>
     <version>2.7</version>
 </dependency>
+
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-slf4j-impl</artifactId>
