--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,16 @@
 			<version>4.0.1</version>
 		</dependency>
 		
-<!-- https://mvnrepository.com/artifact/org.jboss.narayana.jta/narayana-jta -->
+<dependency>
+    <groupId>jakarta.transaction</groupId>
+    <artifactId>jakarta.transaction-api</artifactId>
+    <version>2.0.1</version>
+</dependency>
+		
+<!-- 
+
+
+
 <dependency>
     <groupId>org.jboss.narayana.jta</groupId>
     <artifactId>narayana-jta</artifactId>
@@ -117,10 +126,18 @@
 </dependency>
 
 <dependency>
-<groupId>org.jboss.narayana.jta</groupId>
-<artifactId>cdi</artifactId>
-<version>6.0.0.Final</version>
+	<groupId>org.jboss.narayana.jta</groupId>
+	<artifactId>cdi</artifactId>
+	<version>6.0.0.Final</version>
 </dependency>
+
+<dependency>
+    <groupId>org.jboss.weld.module</groupId>
+    <artifactId>weld-jta</artifactId>
+    <version>5.1.0.Final</version>
+</dependency>
+
+-->
 
 <!--
 		<dependency>
@@ -129,11 +146,13 @@
 		    <version>5.1.0.Final</version>
 		    <scope>test</scope>
 		</dependency>
+		
 <dependency>
     <groupId>jakarta.data</groupId>
     <artifactId>jakarta-data-api</artifactId>
     <version>1.0.0-b1</version>
 </dependency>
+
 		<dependency>
 			<artifactId>jakarta-data-api</artifactId>
 			<groupId>jakarta.data</groupId>
@@ -141,11 +160,7 @@
 		</dependency>
 -->
 
-<dependency>
-    <groupId>org.jboss.weld.module</groupId>
-    <artifactId>weld-jta</artifactId>
-    <version>5.1.0.Final</version>
-</dependency>
+
 
 <dependency>
     <groupId>org.jboss.weld.se</groupId>
