--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
     <version>2.7</version>
 </dependency>
 
+<dependency>
+  <artifactId>jakarta-data-api</artifactId>
+  <groupId>jakarta.data</groupId>
+  <version>1.0.0-SNAPSHOT</version>
+</dependency>
+
 
 	</dependencies>
 
