--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,14 @@
 		    <version>2.0.1</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.swinglabs.swingx/swingx-all -->
+<dependency>
+    <groupId>org.swinglabs.swingx</groupId>
+    <artifactId>swingx-all</artifactId>
+    <version>1.6.5-1</version>
+</dependency>
+
+		
 <!-- 
 
 
