--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.examemulator</groupId>
 	<artifactId>exam-emulator</artifactId>
@@ -19,7 +21,8 @@
 		<maven.jar.plugin.main.class>org.examemulator.Main</maven.jar.plugin.main.class>
 	</properties>
 
-	<!-- allset.config.extensions.version - configs for plugins like pmd, spotbugs and checkstyle -->
+	<!-- allset.config.extensions.version - configs for plugins like pmd,
+	spotbugs and checkstyle -->
 
 	<build>
 		<plugins>
@@ -77,67 +80,67 @@
 
 
 	<dependencies>
-	
+
 		<!-- Data Base -->
 		<dependency>
-		    <groupId>org.hsqldb</groupId>
-		    <artifactId>hsqldb</artifactId>
-		    <version>2.7.1</version>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.7.1</version>
 		</dependency>
-	
+
 		<!-- CDI -->
 		<dependency>
 			<groupId>jakarta.enterprise</groupId>
 			<artifactId>jakarta.enterprise.cdi-api</artifactId>
 			<version>4.0.1</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>jakarta.transaction</groupId>
-		    <artifactId>jakarta.transaction-api</artifactId>
-		    <version>2.0.1</version>
+			<groupId>jakarta.transaction</groupId>
+			<artifactId>jakarta.transaction-api</artifactId>
+			<version>2.0.1</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.jboss.weld.se</groupId>
-		    <artifactId>weld-se-core</artifactId>
-		    <version>5.1.0.Final</version>
+			<groupId>org.jboss.weld.se</groupId>
+			<artifactId>weld-se-core</artifactId>
+			<version>5.1.0.Final</version>
 		</dependency>
-		
-		<!-- 
+
+		<!--
 		<dependency>
-		    <groupId>org.jboss.weld.module</groupId>
-		    <artifactId>weld-jta</artifactId>
-		    <version>5.1.0.Final</version>
+			<groupId>org.jboss.weld.module</groupId>
+			<artifactId>weld-jta</artifactId>
+			<version>5.1.0.Final</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.jboss.narayana.jta</groupId>
-		    <artifactId>narayana-jta</artifactId>
-		    <version>6.0.0.Final</version>
+			<groupId>org.jboss.narayana.jta</groupId>
+			<artifactId>narayana-jta</artifactId>
+			<version>6.0.0.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.narayana.jta</groupId>
 			<artifactId>cdi</artifactId>
 			<version>6.0.0.Final</version>
 		</dependency>
-		-->		
-         
+		-->
+
 		<dependency>
-		    <groupId>org.eclipse.persistence</groupId>
-		    <artifactId>eclipselink</artifactId>
-		    <version>4.0.1</version>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>4.0.1</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>jakarta.data</groupId>
-		    <artifactId>jakarta-data-api</artifactId>
-		    <version>1.0.0-b3</version>
+			<groupId>jakarta.data</groupId>
+			<artifactId>jakarta-data-api</artifactId>
+			<version>1.0.0-b3</version>
 		</dependency>
-		
+
 		<!-- utils -->
-	
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
@@ -157,32 +160,44 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-api</artifactId>
-		    <version>2.7</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.7</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-core</artifactId>
-		    <version>2.7</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.7</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-slf4j-impl</artifactId>
-		    <version>2.7</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.h-thurow</groupId>
+			<artifactId>simple-jndi</artifactId>
+			<version>0.23.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>5.0.1</version>
+		</dependency>
+
 		
-		<!--
+		<!-- Tests -->
 		<dependency>
 		    <groupId>org.jboss.weld</groupId>
 		    <artifactId>weld-core-test</artifactId>
 		    <version>5.1.0.Final</version>
 		    <scope>test</scope>
 		</dependency>
-		-->		
-	
+
 	</dependencies>
 
 </project>
