--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,13 @@
 			<artifactId>HikariCP</artifactId>
 			<version>5.0.1</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-configuration2</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+		
 
 		
 		<!-- Tests -->
