--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,11 @@
 		    <version>2.9.0</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.formdev</groupId>
+		    <artifactId>flatlaf</artifactId>
+		    <version>3.2</version>
+		</dependency>		
 
 		
 		<!-- Tests -->
