--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,19 @@
 		    <groupId>com.formdev</groupId>
 		    <artifactId>flatlaf</artifactId>
 		    <version>3.2</version>
-		</dependency>		
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-configuration2</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.4</version>
+		</dependency>
 
 		
 		<!-- Tests -->
