--- a/src/main/resources/exam-emulator.properties
+++ b/src/main/resources/exam-emulator.properties
@@ -1,2 +1,4 @@
+application.certfications.minscore=90
+application.certfications.minattempts=3
 application.certfications.folder=/home/fernando/Development/workspaces/eclipse-workspace/certifications-technologies
 application.database=${application.certfications.folder}/examulator-database
