--- a/doc/cdi/services/org.jboss.weld.bootstrap.api.Service
+++ b/doc/cdi/services/org.jboss.weld.bootstrap.api.Service
@@ -1,1 +1,1 @@
-org.examemulator.util.transaction.jta.NarayanaTransactionServices
+org.examemulator.infra.transaction.jta.NarayanaTransactionServices
